Bug 40394: Strip only one leading LF if there is one; r=harishd